--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -39,3 +39,12 @@
   margin-top: 40px !important;
   font-size: 14px;
 }
+
+.profile-creator {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  height: 100px;
+  width: 100px;
+  border-radius: 100px;
+}
